syntax = "proto3";

package service1;

option go_package = "project-root/proto/service1pb";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string text = 1;
}

message HelloResponse {
  string text = 1;
}
